--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -1,9 +1,18 @@
 cmake_minimum_required(VERSION 3.23)
-project(OJsubmit)
+project(
+    OJSubmit
+    VERSION 0.1
+    DESCRIPTION "빌드 프로젝트"
+    LANGUAGES CXX
+)
 
 set(CMAKE_CXX_STANDARD 20)
 
-include_directories(.)
 
-add_executable(prog prog.cc)
+include_directories(.)
+include_directories(./Lib)
+
+add_executable(prog prog.cpp)
 add_executable(makesource makesource.cpp)
+add_executable(demo demo.cpp)
+add_executable(source source.cpp)
