--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -8,11 +8,12 @@ project(
 
 set(CMAKE_CXX_STANDARD 20)
 
-
 include_directories(.)
 include_directories(./Lib)
+include_directories(./Testlib)
 
 add_executable(prog prog.cpp)
 add_executable(makesource makesource.cpp)
-add_executable(demo demo.cpp)
-add_executable(source source.cpp)
+add_executable(main main.cpp)
+add_executable(vali validator.cpp)
+add_executable(std17 ver_std17.cpp)
