--- a/.gitignore
+++ b/.gitignore
@@ -32,3 +32,13 @@
 *.app
 
 main.cpp
+*/.ninja_deps
+*/.ninja_log
+build.ninja
+/cmake-build-debug/
+/cmake-build-release/
+/cmake-build-debug-clang/
+/Unused/
+/seperate-space/
+/Testlib/
+/TestData/
